# lilyterm

./: configure.ac
data/: ._lilyterm.1  ._lilyterm.desktop  ._lilyterm.xml  ._lilyterm.xpm
po/: ._Makefile  ._de.po  ._es.po  ._fr.po  ._it.po  ._lilyterm.pot  ._nl.po  ._pl.po  ._pt_BR.po  ._ru.po  ._sk.po  ._tr.po  ._uk.po  ._zh_CN.po  ._zh_TW.po
src/: ._console.c  ._console.h  ._data.h  ._dialog.c  ._dialog.h  ._font.c  ._font.h  ._lilyterm.h  ._main.c  ._main.h  ._menu.c  ._menu.h  ._misc.c  ._misc.h  ._notebook.c  ._notebook.h  ._pagename.c  ._pagename.h  ._profile.c  ._profile.h  ._property.c  ._property.h  ._unit_test.sh  ._window.c  ._window.h
